<resources>


    <!-- Errors -->
    <string name="not_known_error">האפליקצייה נתקלה בבעיה לא ידועה</string>
    <!-- Input errors -->
    <string name="email_format_error">אימייל שגוי</string>
    <string name="password_short_error">סיסמא צריכה להיות לפחות בלעת 6 תווים</string>
    <string name="password_not_match_error">הסיסמא אינה תואמת</string>
    <!-- INTERNET error -->
    <string name="no_internet_error">אין חיבור לרשת</string>
    <!-- Firebase User errors -->
    <string name="firebase_wrong_password_error">סיסמא לא נכונה</string>
    <string name="firebase_wrong_email_error">האימייל אינו קיים במערכת</string>
    <string name="firebase_weak_password">סיסמא חייבת להיות בעלת לפחות 6 תווים</string>
    <string name="firebase_bad_email">אימייל לא תקין</string>
    <string name="firebase_user_already_exist">משתמש בעל אימייל זהה כבר רשום במערכת</string>

    <string name="app_name">Manch</string>
    <string name="manch_string">מאנצ\'</string>
    <string name="email_string">אימייל</string>
    <string name="password_string">סיסמא</string>
    <string name="reenter_password_string">אשר סיסמא</string>
    <string name="sign_in_string">התחבר</string>
    <string name="sign_up_string">הרשמה</string>
    <string name="sign_up_now"><u>אין לך משתמש? הרשם עכשיו!</u></string>
    <string name="sign_in_now"><u>כבר יש לך משתמש? התחבר עכשיו!</u></string>
    <string name="title_activity_management">ניהול הזמנות</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="purchase_history">היסטוריה</string>
    <string name="purchase_track">מעקב הזמנה</string>
    <string name="purchase_new_order">הזמנה חדשה</string>
    <string name="sign_out">התנתקות</string>
    <string name="price">מחיר</string>
    <string name="total_price">מחיר כולל: %1$d</string>
    <string name="minimum_order_price">מינימום להזמנה: %d</string>
    <string name="full_name">שם מלא</string>
    <string name="phone_number">מספר פלאפון</string>
    <string name="address">כתובת</string>
    <string name="app_gps_permmision_required">אשר את ההרשאות מיקום לאפליקצייה לשימוש בכפתור זה</string>
    <string name="title_activity_maps">איתור מיקום</string>
    <string name="finish_string">סיים</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="log_out_confirmation">האם אתה בטוח שברצונך להתנתק?</string>
    <string name="send_order">שלח הזמנה</string>
    <string name="final_price">"מחיר סופי: "</string>
    <string name="error_sending_order">שגיאה בניסיון שליחת הזמנה</string>
    <string name="sucess_order_sent">ההזמנה נשלחה בהצלחה!</string>
    <string name="error_name_empty">שדה שם אינו יכול להיות ריק</string>
    <string name="error_phone_empty">שדה טלפון אינו יכול להיות ריק</string>
    <string name="error_address_empty">שדה כתובת אינו יכול להיות ריק</string>
    <string name="error_name_too_short">שדה שם צריך לפחות 2 תווים</string>
    <string name="error_phone_too_short">שדה טלפון צריך לפחות 7 תווים</string>
    <string name="error_address_too_short">שדה כתובת צריך לפחות 3 תווים</string>
    <string name="store_closed">החנות סגורה</string>
    <string name="status_pending">ממתין</string>
    <string name="status_accepted">אושר</string>
    <string name="status_preparing">בהכנה</string>
    <string name="status_sent">נשלח</string>
    <string name="no_active_orders">אין הזמנות פעילות</string>
    <string name="press_back_to_leave">לחץ \"אחורה\" שוב על מנת לצאת</string>
    <string name="open_network_settings">פתח הגדרות רשת</string>
    <string name="waiting_for_delivery_status_text">ברגע שההזמנה שלך תצא לדרך המיקום יתעדכן! שים לב, השליח יכול לעצור במספר נקודות בדרך אלייך</string>
    <string name="new_order_text">מאנצ\'? מאנצ\'?! מאנצ\'?!!?!?! \n לחץ להזמנה חדשה!</string>
    <string name="display_products">הצג מוצרים</string>
    <string name="bad_gps_signal">קליטת GPS גרועה.</string>
    <string name="gps_settings_not_avilable">שירותי מיקום אינם זמינים.</string>
    <string name="gps_offline">ג\'י.פי.אס כבוי.</string>
    <string name="locate_gps_signal">מאתר מיקום ג\'י.פי.אס</string>
    <string name="place_with_no_name">מיקום ללא שם</string>


    <array name="status_array">
        <item>@string/status_pending</item>
        <item>@string/status_accepted</item>
        <item>@string/status_preparing</item>
        <item>@string/status_sent</item>
    </array>
</resources>
