<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:custom="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@color/transperentWhite"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="נרשמים חדשים מקבלים 10% הנחה על הזמנה ראשונה!"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/EditText_FloatHint_Apearance"
            >

            <android.support.design.widget.TextInputEditText
                android:gravity="right"
                android:id="@+id/sign_up_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email_string"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="40"
                android:minWidth="@dimen/screenSize_g5_width"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/EditText_FloatHint_Apearance"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sign_up_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="15"
                android:minWidth="@dimen/screenSize_g5_width"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/EditText_FloatHint_Apearance"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sign_up_repassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/reenter_password_string"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="15"
                android:minWidth="@dimen/screenSize_g5_width"/>
        </android.support.design.widget.TextInputLayout>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/login_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="@dimen/screenSize_g5_width"
            android:text="@string/sign_up_string"
            android:textColor="@color/white"
            android:textSize="@dimen/bodyTextSize"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorError="@color/red_error"
            custom:pb_colorNormal="@color/colorButtonNormal"
            custom:pb_colorPressed="@color/colorButtonPressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="Success"
            custom:pb_textError="Error"
            custom:pb_textProgress="Loading"/>

        <TextView
            android:id="@+id/sign_up_text_existingUser"
            style="@style/TextHyperLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/sign_in_now"/>
    </LinearLayout>
</ScrollView>